--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,48 @@
 page-home {
+  @keyframes slideInFromLeft {
+    0% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  .container{
+    text-align: center;
+    animation:slideInFromLeft 1s ease-out 0.5s 1 ;
+  }
+  p{
+    font-family: Amatic SC;
+    font-size: 60px;
+    margin: 0px 0px;
+  }
+  #birth{
+    margin-bottom: 40px;
+  }
+  h1{
 
+    font-family: Amerika Sans;
+    font-size: 90px;
+    padding-top: 70px;
+  }
+
+  .content{
+    background: linear-gradient(45deg,#FF8E61, rgba(255, 109, 111, 0.89), rgb(255, 97, 255)),url(../../assets/imgs/karina-carvalho-92689-unsplash.jpg);
+    color: white;
+    background-position: center;
+    background-size: cover;
+  }
+  .item{
+    color: white;
+    background: none;
+    margin-bottom: 20px;
+  }
+  span{
+    color: white;
+    font-family: Amerika Sans;
+    font-size: 30px;
+    letter-spacing: 20px;
+  }
 }
